# movies_notes_bot

./: .env.postgres.template  .env.template  README.md  alembic.ini  docker-compose.yaml  main.py  messages.json  pyproject.toml
bot/: context.py  settings.py
bot/common/: dispatch.py
bot/database/: database.py
bot/handlers/: start.py
bot/models/: user.py
migration/: env.py
migration/versions/: 2f41c421e0c7_initial.py  98fe040627d7_user_first_and_last_name.py
